# fuzz-test-example

./: .gitignore  CMakeLists.txt  README.md  cifuzz.yaml  main.cpp  my_fuzz_test_1.cpp  my_fuzz_test_2.cpp
src/: CMakeLists.txt  sut.c  sut.h
